# openclaw-crypto-ai-quant

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  candles_dbs  deploy_sweep.py  diag_db_read.py  diag_decisions.py  diag_health.py  diag_signal.py  execution_live.py  export_state.py  factory_run.py  fetch_funding_rates.py  generate_config.py  hl_ws_sidecar_client.py  hyperliquid_meta.py  hyperliquid_ws.py  live_trader.py  market_watch.py  mei_alpha_v1.py  pyproject.toml  run_live.sh  run_paper.sh  strategy_overrides.yaml  validate_config_parity.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backtester/: Cargo.toml  MIGRATION.md  README.md  run_full_sweep.sh  sweep_full_34axis.yaml  sweep_narrowed_29axis.yaml
backtester/.github/workflows/: gpu-parity-gate.yml
backtester/crates/bt-cli/: Cargo.toml  build.rs
backtester/crates/bt-cli/src/: main.rs
backtester/crates/bt-core/: Cargo.toml
backtester/crates/bt-core/src/: accounting.rs  behaviour.rs  candle.rs  config.rs  decision_kernel.rs  engine.rs  execution_contract.rs  init_state.rs  json_metrics.rs  kernel_entries.rs  kernel_exits.rs  lib.rs  position.rs  reason_codes.rs  report.rs  state_store.rs  sweep.rs
backtester/crates/bt-core/src/exits/: mod.rs  smart_exits.rs  stop_loss.rs  take_profit.rs  trailing.rs
backtester/crates/bt-core/src/indicators/: adx.rs  atr.rs  bollinger.rs  ema.rs  macd.rs  mod.rs  rsi.rs  volume.rs
backtester/crates/bt-core/src/signals/: confidence.rs  entry.rs  gates.rs  mod.rs
backtester/crates/bt-core/tests/: decision_semantics_contract.rs  gpu_cpu_parity.rs  main_v8_parity.rs  sub_bar_exit_smoke_1h_3m.rs  tp_atr_mult_directional_parity.rs
backtester/crates/bt-data/: Cargo.toml
backtester/crates/bt-data/src/: lib.rs  sqlite_loader.rs
backtester/crates/bt-gpu/: Cargo.toml  build.rs
backtester/crates/bt-gpu/codegen/: drift.rs  emit.rs  mod.rs  templates.rs
backtester/crates/bt-gpu/codegen/decision/: decision_templates.rs  mod.rs
backtester/crates/bt-gpu/kernels/: decision_source_hashes.json  generated_accounting.cu  generated_decision.cu  indicator_kernel.cu  sweep_engine.cu
backtester/crates/bt-gpu/shaders/: sweep_engine.wgsl
backtester/crates/bt-gpu/src/: axis_split.rs  buffers.rs  gpu_host.rs  layout.rs  lib.rs  precision.rs  precompute.rs  raw_candles.rs  tpe_sweep.rs
backtester/crates/bt-gpu/tests/: btc_alignment_self_bypass.rs  cpu_gpu_parity_sweep_1h_3m.rs  eob_forced_close_axis_parity.rs  gpu_decision_parity.rs  gpu_runtime_axis_parity.rs  gpu_runtime_parity_tiny_fixture.rs  gpu_sweep_exit_orchestration.rs  gpu_sweep_full_parity.rs  precision_benchmark.rs  sub_bar_packing_invariants.rs  tp_atr_mult_directional_parity.rs
backtester/crates/bt-runtime/: Cargo.toml
backtester/crates/bt-runtime/src/: lib.rs
backtester/crates/bt-signals/: Cargo.toml
backtester/crates/bt-signals/src/: behaviour.rs  confidence.rs  entry.rs  gates.rs  lib.rs  views.rs
backtester/crates/risk-core/: Cargo.toml
backtester/crates/risk-core/src/: lib.rs
backtester/docs/: gpu-codegen-guide.md  gpu-runtime-validation-report.md
backtester/plan/4/: gpu-codegen-spike.md
backtester/plan/5/: gpu-decision-codegen.md
backtester/scripts/: three_way_parity.py
backtester/sweeps/: allgpu_60k.yaml  allgpu_full_v2.yaml  full_144v.yaml  full_34axis.yaml  generate_17phase_144v.py  narrowed_29axis.yaml  run_17phase_144v.sh  run_full_sweep.sh  smoke.yaml
backtester/sweeps/full_144v_17phase/: README.md  manifest.yaml  p01_144v.yaml  p02_144v.yaml  p03_144v.yaml  p04_144v.yaml  p05_144v.yaml  p06_144v.yaml  p07_144v.yaml  p08_144v.yaml  p09_144v.yaml  p10_144v.yaml  p11_144v.yaml  p12_144v.yaml  p13_144v.yaml  p14_144v.yaml  p15_144v.yaml  p16_144v.yaml  p17_144v.yaml
backtester/testdata/gpu_cpu_parity/: README.md  candles_1h.json  expected_gpu_sweep.json  generate_candles_fixture.py  strategy.yaml  tp_atr_mult_strategy.yaml
backtester/testdata/kernel_path/: entry_exit_kernel_path.json
backtester/testdata/three_way_parity/: cpu_replay.json  gpu_sweep.jsonl  kernel_shadow_report.json
config/: ensemble.example.yaml  (+17 more)
engine/: oms.py  (+16 more)
hub/: Cargo.toml
hub/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
hub/frontend/src/: App.svelte  app.css  main.ts
hub/frontend/src/components/: Sidebar.svelte  SymbolDetailModal.svelte  SymbolDetailPanel.svelte
hub/frontend/src/lib/: api.ts  format.ts  mode-labels.ts  stores.svelte.ts  stores.ts  tunnel.ts  ws.ts
hub/frontend/src/pages/: Backtest.svelte  Config.svelte  Dashboard.svelte  Factory.svelte  GridView.svelte  Statements.svelte  Sweep.svelte  System.svelte
hub/frontend/src/wc/: candle-chart.ts  index.ts  mid-price.ts  mini-candles.ts  price-tick.ts  sparkline-chart.ts  status-badge.ts  trade-panel.ts
hub/src/: auth.rs  config.rs  config_approval.rs  config_audit.rs  diagnostic_audit.rs  error.rs  factory_capability.rs  heartbeat.rs  hyperliquid.rs  main.rs  manual_trade.rs  sidecar.rs  state.rs
hub/src/db/: candles.rs  decisions.rs  mod.rs  pool.rs  runtime.rs  trading.rs  tunnel.rs
hub/src/routes/: backtest.rs  config.rs  decisions.rs  factory.rs  mod.rs  monitor.rs  sweep.rs  system.rs  trade.rs
hub/src/subprocess/: backtester.rs  factory.rs  manual_trade.rs  mod.rs
hub/src/ws/: broadcast.rs  mod.rs  topics.rs
runtime/aiq-runtime/: Cargo.toml
runtime/aiq-runtime/src/: assist_daemon.rs  decision_events.rs  live_cycle.rs  live_daemon.rs  live_fill_sync.rs  live_hyperliquid.rs  live_lane.rs  live_manifest.rs  live_oms.rs  live_risk.rs  live_safety.rs  live_secrets.rs  live_service.rs  live_state.rs  live_status.rs  main.rs  paper_config.rs  paper_cycle.rs  paper_daemon.rs  paper_export.rs  paper_lane.rs  paper_loop.rs  paper_manifest.rs  paper_run_once.rs  paper_seed.rs  paper_service.rs  paper_service_config.rs  paper_status.rs  test_support.rs
runtime/aiq-runtime/tests/: paper_daemon_smoke.rs
ws_sidecar/: Cargo.toml
ws_sidecar/src/: main.rs
(+390 files in other folders)
