[workspace]
resolver = "2"
members = [
    "runtime/aiq-runtime",
    "runtime/aiq-runtime-core",
]
exclude = [
    "backtester",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
