[workspace]
resolver = "2"
members = [
    "crates/bt-signals",
    "crates/bt-core",
    "crates/bt-data",
    "crates/bt-cli",
    "crates/bt-gpu",
    "crates/risk-core",
    "crates/bt-runtime",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
