[package]
name = "aiq-hub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aiq-hub"
path = "src/main.rs"

[features]
default = []
factory = []

[dependencies]
anyhow = "1"
aiq-runtime-core = { path = "../runtime/aiq-runtime-core" }
axum = { version = "0.8", features = ["ws"] }
bt-core = { path = "../backtester/crates/bt-core" }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.33", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.26"
askama = "0.12"
askama_axum = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
libc = "0.2"
fs2 = "0.4"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rmpv = "1.3"
sha2 = "0.10"
sha3 = "0.10"

[workspace]

[dev-dependencies]
tempfile = "3"
