[package]
name = "aiq-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aiq-runtime"
path = "src/main.rs"

[dependencies]
aiq-runtime-core = { path = "../aiq-runtime-core" }
anyhow = { workspace = true }
bt-core = { path = "../../backtester/crates/bt-core" }
chrono = { version = "0.4", features = ["clock"] }
clap = { workspace = true }
fs2 = "0.4"
risk-core = { path = "../../backtester/crates/risk-core" }
rusqlite = { version = "0.33", features = ["backup", "bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
signal-hook = "0.3"
tracing-subscriber = { workspace = true }

[dev-dependencies]
libc = "0.2"
tempfile = "3"
