[package]
name = "aiq-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aiq-runtime"
path = "src/main.rs"

[dependencies]
aiq-runtime-core = { path = "../aiq-runtime-core" }
anyhow = { workspace = true }
bt-core = { path = "../../backtester/crates/bt-core" }
chrono = { version = "0.4", features = ["clock"] }
clap = { workspace = true }
fs2 = "0.4"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rmpv = "1.3"
risk-core = { path = "../../backtester/crates/risk-core" }
rusqlite = { version = "0.33", features = ["backup", "bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10"
sha3 = "0.10"
signal-hook = "0.3"
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
