[package]
name = "bt-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mei-backtester"
path = "src/main.rs"

[dependencies]
bt-core = { path = "../bt-core" }
bt-data = { path = "../bt-data" }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rayon = "1"
bt-gpu = { path = "../bt-gpu", optional = true }

[features]
gpu = ["dep:bt-gpu"]
