[package]
name = "bt-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bt-signals = { path = "../bt-signals" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rayon = "1"
rustc-hash = "2"
risk-core = { path = "../risk-core" }
rusqlite = { version = "0.33", features = ["bundled"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
