[package]
name = "bt-gpu"
version = "0.1.0"
edition = "2021"

[features]
# Convenience flag to match workspace CLI feature naming.
# bt-gpu is inherently GPU-backed and always compiles CUDA kernels in build.rs.
gpu = []
# Run CUDA codegen from Rust kernel source during build.
# Generates kernels/generated_accounting.cu for inspection.
codegen = []

[dependencies]
bt-core = { path = "../bt-core" }
bt-data = { path = "../bt-data" }
cudarc = { version = "0.19", features = ["driver", "cuda-12000"] }
bytemuck = { version = "1", features = ["derive"] }
rayon = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tpe = "0.2"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"

[dev-dependencies]
risk-core = { path = "../risk-core" }

[build-dependencies]
sha2 = "0.10"
serde_json = "1"
